@@ -8,6 +8,7 @@
  *
  * Copyright (C) 2009-2017 by Gilles Caulier <caulier dot gilles at gmail dot com>
  * Copyright (C) 2010      by Mikkel Baekhoej Christensen <mbc at baekhoej dot dk>
+ * Copyright (C) 2017      by Ahmed Fathi <ahmed dot fathi dot abdelmageed at gmail dot com>
  *
  * This program is free software; you can redistribute it
  * and/or modify it under the terms of the GNU General
@@ -67,6 +68,6 @@ private:
     Private* const d;
 };
 
-}  // namespace Digikam
+} // namespace Digikam
 
 #endif // WATERMARK_H
